# parser_generator

./: .gitignore  Cargo.toml  test.txt
.github/workflows/: parser_generator_test.yml
lr_table/: Cargo.toml  test.txt
lr_table/examples/: print_lr_table.rs
lr_table/src/: augmented_vocab_token.rs  bit_set.rs  closure.rs  error.rs  first_map.rs  fixed_map.rs  grammar.rs  indexed_grammar.rs  kernel.rs  kernel_table.rs  lib.rs  lr_state_map.rs  lr_table.rs  parse_simulator.rs  partition_closure.rs  position.rs  table_builder.rs  u8_vocab.rs  vocab_set.rs  vocabulary.rs
parser-user-error/: Cargo.toml
parser-user-error/src/: lib.rs
parser_generator_impl/: Cargo.toml
parser_generator_impl/src/: error.rs  ident.rs  lib.rs  parse_grammar.rs  symbol.rs  symbol_stream.rs  type_symbol.rs  util.rs
parser_generator_impl/src/annotated_grammar/: label_type_map.rs  mod.rs  parse_grammar.rs  production_node.rs  production_ref.rs  production_rule.rs  terminal.rs  util.rs
parser_generator_impl/src/code_gen/: code_gen.rs  collect_tokens.rs  constructor.rs  lr_state_types.rs  mod.rs  parse_loop.rs  reduce_rule.rs  state_action_builder.rs  states_enum.rs  util.rs
src/: disjoint_count_helper.rs  error.rs  lib.rs  main.rs  parser.rs  parser_state.rs  parser_stream.rs
tests/: auto_into.rs  brainfck.rs  disjoint_token_pattern.rs  error_messages.rs  fallible_ctor.rs  fallible_input_stream.rs  into_error_type.rs  sanity_tests.rs  test_context.rs  test_large_or.rs  test_simple.rs  token_pattern.rs  try_from_default_ctor.rs
