[package]
name = "parser_generator"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
googletest = "0.14.2"
parser_generator_impl = { path = "./parser_generator_impl" }

[dev-dependencies]
itertools = "0.14.0"
cknittel-util = { git = "https://github.com/ClaytonKnittel/cknittel-util.git", rev = "7e35310d1fde5753a1252900df1747390b1eb9a2" }
