[package]
name = "parser_generator"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
googletest = "0.14.2"
parser_generator_impl = { path = "./parser_generator_impl" }

[dev-dependencies]
itertools = "0.14.0"
cknittel-util = { git = "https://github.com/ClaytonKnittel/cknittel-util.git", rev = "f267aa482abb1820b4fe2f890c073723f8569efe" }
