[package]
name = "parser_generator"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
googletest = "0.14.2"
parser_generator_impl = { path = "./parser_generator_impl" }
parser-user-error = { path = "./parser-user-error" }
itertools = "0.14.0"

[dev-dependencies]
itertools = "0.14.0"
cknittel-util = { git = "https://github.com/ClaytonKnittel/cknittel-util.git", rev = "00b464a993cfb21179538a49f9d123c28fefc7e1" }
