[package]
name = "parser_generator_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
cknittel-util = { git = "https://github.com/ClaytonKnittel/cknittel-util.git", rev = "74390c913416d7085718a1560449ad699c29fff3", features = [
  "macro",
] }
itertools = "0.14.0"
lr_table = { path = "../lr_table" }
proc-macro-error = { version = "1", default-features = false }
proc-macro2 = "1.0.106"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }

[dev-dependencies]
googletest = "0.14.2"
