[package]
name = "parser_generator_impl"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
cknittel-util = { git = "https://github.com/ClaytonKnittel/cknittel-util.git", rev = "7e35310d1fde5753a1252900df1747390b1eb9a2", features = [
  "macro",
] }
itertools = "0.14.0"
lr_table = { path = "../lr_table" }
proc-macro-error = { version = "1", default-features = false }
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full", "extra-traits"] }

[dev-dependencies]
googletest = "0.14.2"
